--- a/w5/CMakeLists.txt
+++ b/w5/CMakeLists.txt
@@ -15,7 +15,8 @@ add_executable(unittests
         tests/algo3-test.cpp
         tests/algo4-test.cpp alghoritms/algo4.cpp
         tests/algo5-test.cpp alghoritms/algo5.cpp
-        tests/algo6-test.cpp alghoritms/algo6.cpp)
+        tests/algo6-test.cpp alghoritms/algo6.cpp
+        tests/algo7-test.cpp alghoritms/algo7.cpp)
 
 target_link_libraries(unittests PRIVATE gtest gtest_main -lpthread)
 
@@ -37,3 +38,6 @@ target_link_libraries(algo5-bench PRIVATE benchmark::benchmark)
 
 add_executable(algo6-bench alghoritms/algo6.cpp benchmarks/algo6-bench.cpp)
 target_link_libraries(algo6-bench PRIVATE benchmark::benchmark)
+
+add_executable(algo7-bench alghoritms/algo7.cpp benchmarks/algo7-bench.cpp)
+target_link_libraries(algo7-bench PRIVATE benchmark::benchmark)
