--- a/w6/CMakeLists.txt
+++ b/w6/CMakeLists.txt
@@ -8,11 +8,13 @@ find_package(benchmark REQUIRED)
 
 include_directories(.)
 
-add_compile_options(-O3 -Wall -Wextra -falign-functions=128)
+add_compile_options(-O3 -march=native -Wall -Wextra -falign-functions=128)
 add_executable(unittests hash-table-test.cpp)
 
 target_link_libraries(unittests PRIVATE gtest gtest_main -lpthread)
 
+add_executable(bench-insert hash-table-insert-bench.cpp)
+target_link_libraries(bench-insert PRIVATE benchmark::benchmark)
 
-add_executable(bench hash-table-bench.cpp)
-target_link_libraries(bench PRIVATE benchmark::benchmark)
+add_executable(bench-insert-erase hash-table-insert-erase-bench.cpp)
+target_link_libraries(bench-insert-erase PRIVATE benchmark::benchmark)
